Added Readme with clear instructions & screenshots

--- a/examples/authn/django-authn/templates/home.html
+++ b/examples/authn/django-authn/templates/home.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <title>AuthN Django Sample</title>
-  <link rel="icon" type="image/xcon" href="login.aws.us.pangea.cloud/favicon.icon">
+  <link rel="icon" type="image/xcon" href="../static/media/Pangea-Brandmark-Color-@2x.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
